# yuki-llama-client

./: Cargo.toml  README.md  yuki-client_v0.1.py  yuki-client_v0.2.py
chats/: summary_demo_chat.json
history/: history_demo_chat.json
python/: yuki-client_v0.2.py  yuki-client_v0.3.0.py
python/backups/: log_demo_chat_1735665360.json
rust/: Cargo.toml  yuki_client
rust/src/: main.rs
src/: main.rs
