[package]
name = "yuki_client"
version = "0.3.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
rustyline = "14.0"